# quien_es_el_mechaburro

./: .gitignore  Cargo.toml  LICENSE  README  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/models/: burro.gltf  burro_old.glb  candy.gltf  donut.glb  laser.gltf  level_00.glb  level_01.glb  level_01.gltf  level_02.glb  level_03.glb  level_04.glb  level_05.glb  level_06.glb  skybox.glb  stage.glb  thing.glb  walls.glb
assets/shaders/: background.wgsl  scroll_texture.wgsl  texture.wgsl
assets_src/models/: burro_new.blend  burro_new.blend1  level_00.blend  level_00.blend1  level_01.blend  level_01.blend1  level_02.blend  level_02.blend1  level_03.blend  level_03.blend1  level_04.blend  level_04.blend1  level_05.blend  level_05.blend1  level_06.blend  level_06.blend1  skybox.blend
src/: asset_loading.rs  assets.rs  audio.rs  bot.rs  bullet.rs  burro.rs  character_select.rs  collision.rs  config.rs  direction.rs  floor.rs  follow_text.rs  game_camera.rs  game_controller.rs  game_state.rs  hit.rs  ingame.rs  ingame_ui.rs  input.rs  inspect.rs  main.rs  mecha_picker.rs  menus.rs  mesh.rs  options.rs  pause.rs  player.rs  scene_hook.rs  score_display.rs  smoke.rs  splash.rs  title_screen.rs  ui.rs  winner.rs
src/debug/: mod.rs
src/ingame/: mod.rs
src/ingame/ui/: mod.rs  score_display.rs  winner_circle.rs
src/levels/: debug.rs  level_02.rs
src/loading/: mod.rs
src/menu/: character_select.rs  mod.rs  options.rs  settings.rs  splash.rs  title_screen.rs
src/menu/character_select/: loader.rs  mod.rs  state.rs  update_ui.rs
src/menu/settings/: loader.rs  mod.rs  setup.rs  state.rs  update.rs
src/menu/title_screen/: loader.rs  mod.rs  state.rs  update.rs
src/menus/: options.rs
src/shaders/: mod.rs
src/ui/: avatar.rs  follow_text.rs  mod.rs  render_to_texture.rs  text_size.rs
src/util/: mod.rs
src_old/: assets.rs  audio.rs  burro.rs  character_select.rs  collision.rs  game_camera.rs  game_controller.rs  hit.rs  main.rs  player.rs  smoke.rs  winner.rs
src_old/menus/: options.rs
wasm/: index.html
