[package]
name = "quien_es_el_mechaburro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"
leafwing-input-manager = "0.3.0"
bevy-inspector-egui = "0.11.0"
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "main", features = ["wav", "ogg"]}
noise = "0.7.0"
rand = "0.8.5"
