[package]
name = "quien_es_el_mechaburro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
debug = []
camera = []
inspect = []
lines = []
fps = []
no_music = []

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_kira_audio = { version = "0.16.0", features = ["wav"]}
bevy_toon_shader = "0.2.0"
bevy_mod_outline = { git = "https://github.com/ramirezmike/bevy_mod_outline", branch = "master" }
bevy_rapier3d = { version = "0.22", features = ["debug-render"] }
leafwing-input-manager = { version = "0.10" }
rand = "0.8"
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }
uuid = "1.3.4"

